ui: fix form fields display on small screens and/or with long labels
* INSPIR-2936

--- a/ui/src/App.scss
+++ b/ui/src/App.scss
@@ -181,3 +181,13 @@ body {
 .ant-modal-wrap {
   padding-top: $header-min-height;
 }
+
+.ant-form-item-label {
+  text-overflow: ellipsis;
+  z-index: 1;
+  padding-right: 8px !important;
+}
+
+.ant-form-item-label > label::after {
+  margin-right: 0 !important;
+}
